--- a/lab3/mine/src/templates/course.html
+++ b/lab3/mine/src/templates/course.html
@@ -13,43 +13,86 @@
 <title>教师教学科研登记系统</title>
 <link href="{{ url_for('static', filename='style1.css') }}" rel="stylesheet">
 <script>
-    function openForm(key) {
-      var form = document.getElementById("updateForm");
-      form.style.display = "block";
-      update_form.key.value = key;
-    }
+  function openForm(key) {
+    var form = document.getElementById("updateForm");
+    form.style.display = "block";
+    update_form.key.value = key;
+  }
 
-    function closeForm() {
-      document.getElementById("updateForm").style.display = "none";
-    }
+  function openForm_1(key) {
+    var form = document.getElementById("updateForm_1");
+    form.style.display = "block";
+    update_form_1.key.value = key;
+  }
 
-    function openwForm(key) {
-      document.getElementById("deleteWarning").style.display = "block";
-      delete_form.key.value = key;
-    }
+  function openwForm(key) {
+    var form = document.getElementById("deleteWarning")
+    form.style.display = "block";
+    delete_form.key.value = key;
+  }
 
-    function closewForm() {
-      document.getElementById("deleteWarning").style.display = "none";
-    } 
-  </script>
-<!-- </script>
-<script type="text/javascript">
-	function checkSelectSet(e) {
-		var input = e.target,
-			list = input.getAttribute('list'),
-			options = document.querySelectorAll('#' + list + ' option[value="'+input.value+'"]'),
-			hiddenInput = document.getElementById(input.getAttribute('id').replace('-display', ''));
+  function openwForm_1(key) {
+    var form = document.getElementById("deleteWarning_1")
+    form.style.display = "block";
+    delete_form_1.key.value = key;
+  }
 
-		if (options.length > 0) {
-			  hiddenInput.value = input.value;
-			  input.value = options[0].innerText;
-		  }
-	}
+  function closeForm(id) {
+    document.getElementById(id).style.display = "none";
+  }
 
-	function addDataListListener(eid) {
-		document.querySelector('#'+eid).addEventListener('input', checkSelectSet)
-	}
-</script> -->
+  let counter = 1;
+  function addInput() {
+    const container = document.getElementById('insert_1');
+    document.getElementById('cnt').value = counter;
+    // const div = document.createElement('div');
+    const input1 = document.createElement('input');
+    const input2 = document.createElement('input');
+    const input3 = document.createElement('input');
+    const input4 = document.createElement('input');
+    const datalist = document.createElement('datalist');
+    const option1 = document.createElement('option');
+    const option2 = document.createElement('option');
+    const option3 = document.createElement('option');
+    const br = document.createElement('br');
+    input1.type = 'text';
+    input2.type = 'text';
+    input3.type = 'text';
+    input4.type = 'text';
+    input1.setAttribute('required', "");
+    input2.setAttribute('required', "");
+    input3.setAttribute('required', "");
+    input4.setAttribute('required', "");
+    input1.name = '工号'+ counter;
+    input2.name = '年份'+ counter;
+    input3.name = '学期'+ counter;
+    input4.name = '承担学时'+ counter;
+    input1.placeholder = '教师' + counter + '工号';
+    input2.placeholder = '课程年份';
+    input3.placeholder = '课程学期';
+    input4.placeholder = '教师' + counter + '承担学时';
+    datalist.id = 'datalist' + counter;
+    input3.setAttribute('list', 'datalist' + counter);
+    option1.text = '春季学期';
+    option1.value = '1';
+    option2.text = '秋季学期';
+    option2.value = '2';
+    option3.text = '夏季学期';
+    option3.value = '3';
+    datalist.appendChild(option1);
+    datalist.appendChild(option2);
+    datalist.appendChild(option3);
+    input3.appendChild(datalist)
+    container.appendChild(br);
+    container.appendChild(input1);
+    container.appendChild(input2);
+    container.appendChild(input3);
+    container.appendChild(input4);
+    counter++;
+  }
+
+</script>
+
 </head>
 
 <body class="app header-fixed sidebar-fixed aside-menu-fixed sidebar-lg-show">
@@ -59,22 +102,40 @@
     <div class="small text-muted">缺省值不变</div>
     <input type="hidden" name="key" value="">
     <input type="hidden" name="type" value="update">
-    <label for="email"><b>课程号</b></label>
     <input type="text" placeholder="课程号" name="课程号">
-    <label for="email"><b>课程名称</b></label>
     <input type="text" placeholder="课程名称" name="课程名称">
-    <label for="email"><b>学时数</b></label>
     <input type="text" placeholder="学时数" name="学时数">
-    <label for="email"><b>课程性质</b></label>
     <input type="text" placeholder="课程性质" name="课程性质" list="type_list">
     <datalist id="type_list">
       <option value="1">本科生课程</option>
       <option value="2">研究生课程</option>
     </datalist>
     <button type="submit" class="btn btn-success" value="Refresh Page" onclick="window.location.reload();">确认</button>
-    <button type="button" class="btn bg-danger" onclick="closeForm()">取消</button>
+    <button type="button" class="btn bg-danger" onclick="closeForm('updateForm')">取消</button>
   </form>
 </div>
+
+<div class="form-popup" id="updateForm_1">
+  <form class="form-container" name="update_form_1" method="POST">
+    <h1>更新</h1>
+    <div class="small text-muted">缺省值不变</div>
+    <input type="hidden" name="key" value="">
+    <input type="hidden" name="type" value="update_1">
+    <input type="text" placeholder="工号" name="工号">
+    <input type="text" placeholder="课程号" name="课程号">
+    <input type="text" placeholder="年份" name="年份">
+    <input type="text" placeholder="学期" name="学期" list="semeter_list">
+    <datalist id="semeter_list">
+      <option value="1">春季学期</option>
+      <option value="2">夏季学期</option>
+      <option value="3">秋季学期</option>
+    </datalist>
+    <input type="text" placeholder="承担学时" name="承担学时">
+    <button type="submit" class="btn btn-success" value="Refresh Page" onclick="window.location.reload();">确认</button>
+    <button type="button" class="btn bg-danger" onclick="closeForm('updateForm_1')">取消</button>
+  </form>
+</div>
+
 <div class="form-popup" id="deleteWarning">
   <form class="form-container" name="delete_form" method="POST">
     <p> </p>
@@ -84,9 +145,10 @@
     <input type="hidden" name="type" value="delete">
     <input type="hidden" name="key" value="">
     <button type="submit" class="btn btn-success" value="Refresh Page" onclick="window.location.reload();">确认</button>
-    <button type="button" class="btn bg-danger" onclick="closewForm();">取消</button>
+    <button type="button" class="btn bg-danger" onclick="closewForm('deleteWarning');">取消</button>
   </form>
 </div>
+
 <header class="app-header navbar"><span class="badge badge-light">数据库系统及应用Lab</span> </header>
 <div class="app-body">
   <div class="sidebar">
@@ -206,10 +268,10 @@
                     <td> {{ i.课程号 }} </td>
                     <td> {{ i.课程名称 }} </td>
                     <td> {{ i.年份 }} </td>
-                    <td> {{ '春季学期' if i.学期==1 else '夏季学期' if i.学期==2 else '秋季学期' }} </td>
+                    <td> {{ '春季学期' if i.学期==1 else '夏季学期' if i.学期==2 else '秋季学期' if i.学期==3 else '' }} </td>
                     <td> {{ i.承担学时 }} </td>
-                    <td><label class="btn btn-success" onclick="openForm(this.parentNode.parentNode.id)">更新</label>
-                      <label class="btn bg-danger" onclick="openwForm(this.parentNode.parentNode.id)">删除</label></td>
+                    <td><label class="btn btn-success" onclick="openForm_1(this.parentNode.parentNode.id)">更新</label>
+                      <label class="btn bg-danger" onclick="openwForm_1(this.parentNode.parentNode.id)">删除</label></td>
                   </tr>
                   {% endfor %}
                 </table>
@@ -217,6 +279,20 @@
             </div>
           </div>
         </div>
+
+        <div class="card">
+          <div class="insert-container">
+            <h4 class="card-title mb-0">添加教师</h4>
+            <form class="form-insert" method="POST" id="insert_1">
+              <input type="hidden" name="type" value="insert_1">
+              <input type="hidden" name="cnt" id="cnt">
+              <input type="text" placeholder="课程号" name="课程号" required="">
+              <button class="btn btn-warning" type="submit">新建</button>
+              <button class="btn btn-info" onclick="addInput()" type="button">增加教师</button>
+            </form>
+          </div>
+        </div>
+
       </div>
     </div>
   </main>
