--- a/lab3/mine/src/templates/index.html
+++ b/lab3/mine/src/templates/index.html
@@ -41,7 +41,7 @@
       <li class="nav-item nav-dropdown"> <a class="nav-link nav-dropdown-toggle" href="paper"> <i class="nav-icon icon-cursor"></i> 论文</a> </li>
       <li class="nav-item nav-dropdown"> <a class="nav-link nav-dropdown-toggle" href="course"> <i class="nav-icon icon-cursor"></i> 课程</a> </li>
       <li class="nav-item nav-dropdown"> <a class="nav-link nav-dropdown-toggle" href="project"> <i class="nav-icon icon-star"></i> 项目</a> </li>
-      <!-- <li class="nav-item"> <a class="nav-link  nav-dropdown-toggle" href="statistics"> <i class="nav-icon icon-speedometer"></i> 业务统计 </a> </li> -->
+      <li class="nav-item nav-dropdown"> <a class="nav-link nav-dropdown-toggle" href="statistic"> <i class="nav-icon icon-star"></i> 统计</a> </li>
     </ul>
   </nav>
   <button class="sidebar-minimizer brand-minimizer" type="button"></button>
